Fix scrollbars impact on formatting

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -172,8 +172,9 @@ td {
 .main {
   max-width: var(--width);
   width: 100%;
-  margin: 0 auto;
   flex: 0 1 auto;
+  margin-left: calc(100vw - 100%);
+  align-self: center;
 }
 @media screen and (max-width: 1200px) {
   .main {
@@ -538,6 +539,7 @@ div.box.box-auto {
   background-color: var(--navbar);
   border-bottom: 1px solid var(--border);
   z-index: 1;
+  padding-left: calc(100vw - 100%)
 }
 .navbar-wrap, .navbar-wrap-unauth {
   display: flex;
@@ -923,7 +925,8 @@ div.box.box-auto {
   color: var(--text-color);
   border-top: 1px solid var(--border);
   padding: 1.5rem 0;
-  margin: auto auto 0;
+  margin-left: calc(100vw - 100%);
+  align-self: center;
 }
 .footer p {
   margin-top: 0;
